# Research-Projects

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: legacy-hnl-build.yml  pwnpower-build.yml
Hackers-Night-Light/: README.md
Hackers-Night-Light/Legacy-HNL/: CMakeLists.txt  LICENSE  esp-idf-env.sh  idf55.ps1  partitions.csv  partitions_8mb.csv  sdkconfig
Hackers-Night-Light/Legacy-HNL/configs/: sdkconfig.esp32c3  sdkconfig.esp32c5
Hackers-Night-Light/Legacy-HNL/interface/: app.js  charts.js  convert_multi.py  csv_generator.js  export_manager.js  host.py  index_new.html  (+2 more)
Pwn-Power/: .cursorignore  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions_8mb.csv  sdkconfig  sdkconfig.defaults
Pwn-Power/configs/: sdkconfig.esp32c3  sdkconfig.esp32c5
Pwn-Power/interface/: app.js  charts.js  convert.py  convert_multi.py  csv_generator.js  export_manager.js  host.py  index.html  index_new.html  login.html  styles.css
Pwn-Power/main/: CMakeLists.txt  ap_config.c  ap_config.h  background_scan.c  background_scan.h  deauth.c  device_db.c  device_db.h  device_lifecycle.c  device_lifecycle.h  firmware_info.c  firmware_info.h  flash_manager.c  flash_manager.h  handshake.c  handshake.h  idle_scanner.c  idle_scanner.h  index_content.c  index_content.h  json_utils.c  json_utils.h  login_content.gz.h  mdns_service.c  mdns_service.h  monitor_uptime.c  monitor_uptime.h  ota.c  ota.h  ouis.c  ouis.h  ouis.json  peer_discovery.c  peer_discovery.h  pwnpower.c  recovery.h  scan_storage.c  scan_storage.h  sta_config.c  sta_config.h  (+11 more)
(+50 files in other folders)
